add room action
