# backend/openapi/models/models.gen.go
@@ -3,6 +3,14 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package models
 
+// Defines values for PostRoomsActionsJSONBodyAction.
+const (
+	CANCEL PostRoomsActionsJSONBodyAction = "CANCEL"
+	JOIN   PostRoomsActionsJSONBodyAction = "JOIN"
+	READY  PostRoomsActionsJSONBodyAction = "READY"
+	START  PostRoomsActionsJSONBodyAction = "START"
+)
+
 // Room defines model for Room.
 type Room struct {
 	IsOpened bool     `json:"isOpened"`
@@ -17,6 +25,17 @@ type UserCreate struct {
 	Password string `json:"password"`
 	Username string `json:"username"`
 }
+
+// PostRoomsActionsJSONBody defines parameters for PostRoomsActions.
+type PostRoomsActionsJSONBody struct {
+	Action PostRoomsActionsJSONBodyAction `json:"action"`
+}
+
+// PostRoomsActionsJSONBodyAction defines parameters for PostRoomsActions.
+type PostRoomsActionsJSONBodyAction string
+
+// PostRoomsActionsJSONRequestBody defines body for PostRoomsActions for application/json ContentType.
+type PostRoomsActionsJSONRequestBody PostRoomsActionsJSONBody
 
 // PostUsersJSONRequestBody defines body for PostUsers for application/json ContentType.
 type PostUsersJSONRequestBody = UserCreate
